[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fonts/actual/base/font_subtitle.tres" type="DynamicFont" id=1]
[ext_resource path="res://particles/sprites/particle_23.png" type="Texture" id=2]
[ext_resource path="res://ui/menus/shop/stat_container.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/small_button_theme.tres" type="Theme" id=4]

[node name="StatContainer" type="HBoxContainer"]
margin_right = 78.0
margin_bottom = 27.0
script = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 48.0
margin_bottom = 30.0
rect_min_size = Vector2( 48, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Button" parent="."]
margin_left = 52.0
margin_right = 277.0
margin_bottom = 30.0
rect_min_size = Vector2( 225, 0 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
text = "STAT_HEALTH"
flat = true
clip_text = true
align = 0

[node name="EmptySpace" type="Control" parent="."]
margin_left = 281.0
margin_right = 281.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="."]
margin_left = 285.0
margin_top = 3.0
margin_right = 297.0
margin_bottom = 27.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 2

[node name="EmptySpace2" type="Control" parent="."]
margin_left = 301.0
margin_right = 306.0
margin_bottom = 30.0
rect_min_size = Vector2( 5, 0 )
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Label" to="." method="_on_Label_focus_entered"]
[connection signal="focus_exited" from="Label" to="." method="_on_Label_focus_exited"]
[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
